<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/tx25"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/Register_AS_a"
        android:textSize="34sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="176dp"
            android:checked="true"
            android:text="@string/admin"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="133dp"
        android:text="@string/button"
        android:textSize="20sp" />
</LinearLayout>



